Add sessionGameStates to Session; Add class Monad m => Bot m

--- a/BanananBack.cabal
+++ b/BanananBack.cabal
@@ -29,13 +29,13 @@ library
       Adapter.InMemory.WSServ
       Application
       Config
+      Domain.GameBot.Actors
+      Domain.GameBot.Bot
+      Domain.GameBot.GameModel
+      Domain.GameBot.GraphBall
       Domain.Session
       Domain.User
       Domain.Validation
-      GameBot.Actors
-      GameBot.Bot
-      GameBot.GameModel
-      GameBot.GraphBall
       Lib
       Reexport
       WebSocketServer
