Add GameConfig and processOneInputMessage (update game model according to WSMessage)

--- a/package.yaml
+++ b/package.yaml
@@ -30,6 +30,9 @@ dependencies:
 - string-random
 - aeson
 - bytestring
+# - record-dot-preprocessor
+- record-hasfield
+- random
 
 
 default-extensions:
