--- a/BanananBack.cabal
+++ b/BanananBack.cabal
@@ -31,8 +31,10 @@ library
       Config
       Domain.GameBot.Actors
       Domain.GameBot.Bot
+      Domain.GameBot.GameConfig
       Domain.GameBot.GameModel
       Domain.GameBot.GraphBall
+      Domain.GameBot.Server
       Domain.Session
       Domain.User
       Domain.Validation
@@ -58,6 +60,8 @@ library
     , containers
     , data-has
     , mtl
+    , random
+    , record-hasfield
     , string-random
     , text
     , websockets
@@ -85,6 +89,8 @@ executable BanananBack-exe
     , containers
     , data-has
     , mtl
+    , random
+    , record-hasfield
     , string-random
     , text
     , websockets
@@ -113,6 +119,8 @@ test-suite BanananBack-test
     , containers
     , data-has
     , mtl
+    , random
+    , record-hasfield
     , string-random
     , text
     , websockets
