--- a/BanananBack.cabal
+++ b/BanananBack.cabal
@@ -25,6 +25,7 @@ source-repository head
 library
   exposed-modules:
       Adapter.HTTP.API.Common
+      Adapter.HTTP.API.Main
       Adapter.HTTP.Common
       Adapter.HTTP.Main
       Adapter.HTTP.Web.Auth
@@ -78,6 +79,7 @@ library
     , wai
     , wai-extra
     , wai-middleware-static
+    , warp
     , websockets
   default-language: Haskell2010
 
@@ -115,6 +117,7 @@ executable BanananBack-exe
     , wai
     , wai-extra
     , wai-middleware-static
+    , warp
     , websockets
   default-language: Haskell2010
 
@@ -153,5 +156,6 @@ test-suite BanananBack-test
     , wai
     , wai-extra
     , wai-middleware-static
+    , warp
     , websockets
   default-language: Haskell2010
