--- a/BanananBack.cabal
+++ b/BanananBack.cabal
@@ -71,6 +71,7 @@ library
     , containers
     , cookie
     , data-has
+    , extra
     , http-types
     , mtl
     , random
@@ -110,6 +111,7 @@ executable BanananBack-exe
     , containers
     , cookie
     , data-has
+    , extra
     , http-types
     , mtl
     , random
@@ -150,6 +152,7 @@ test-suite BanananBack-test
     , containers
     , cookie
     , data-has
+    , extra
     , http-types
     , mtl
     , random
