--- a/BanananBack.cabal
+++ b/BanananBack.cabal
@@ -24,14 +24,14 @@ source-repository head
 
 library
   exposed-modules:
-      Adapter.HTTP.API.Auth
       Adapter.HTTP.API.Common
       Adapter.HTTP.API.Main
+      Adapter.HTTP.API.Routes
       Adapter.HTTP.Common
       Adapter.HTTP.Main
-      Adapter.HTTP.Web.Auth
       Adapter.HTTP.Web.Common
       Adapter.HTTP.Web.Main
+      Adapter.HTTP.Web.Routes
       Adapter.InMemory.Server
       Application
       Config
